Adapt backported CVE fixes/tests to JDK 8 and JMS 1.1 on 5.15.x-TT.x
5.15.x targets Java 8 (JDK-9+ APIs unavailable: List.of/Set.of/Map.of,
String.repeat, no-arg Optional.orElseThrow) and JMS 1.1 (no
MessageFormatRuntimeException; Connection/Session not AutoCloseable).
Also adapts #2136 poison-ack handling to 5.15's MessageAck.POSION_ACK_TYPE
(pre-rename typo) and TransportConnector (no isDisplayStackTrace), and
aligns the relocated transport-validation JMX tests (#2077) to the new
'Transport scheme <x> is not allowed' message.